--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -15,13 +15,13 @@ services:
             - "80:80" #80번 포트를 80번 포트에 맵핑 시켜준다.
             - "443:443" #443번 포트를 443번 포트에 맵핑 시켜준다.
         volumes:
-            - ./data/nginx/nginx.conf:/etc/nginx/nginx.conf
-            - ./data/certbot/conf:/etc/letsencrypt
-            - ./data/certbot/www:/var/www/certbot
+            - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+            - ./certbot/conf:/etc/letsencrypt
+            - ./certbot/www:/var/www/certbot
     certbot:
         image: certbot/certbot
         restart: unless-stopped
         volumes:
-            - ./data/certbot/conf:/etc/letsencrypt
-            - ./data/certbot/www:/var/www/certbot
-        command: certonly --webroot -w /var/www/certbot --force-renewal --email jeong5575@naver.com -d ssgcool.site --agree-tos
+            - ./certbot/conf:/etc/letsencrypt
+            - ./certbot/www:/var/www/certbot
+        command: certonly --webroot -w /var/www/certbot --force-renewal --email jeong5575@naver.com -d ssgcool.site -d www.ssgcool.site --agree-tos
