--- a/deploy/nginx/nginx.conf
+++ b/deploy/nginx/nginx.conf
@@ -1,3 +1,8 @@
+events {
+    worker_connections 1000;  # 프로세스에 할당되는 커넥션의 최대개수
+}
+
+
 http{
     server {
             listen 80; # http (80번 포트)로 요청이 들어올때
